--- a/MyPad/Views/Styles/Controls/ToastNotifications.xaml
+++ b/MyPad/Views/Styles/Controls/ToastNotifications.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
 
-    <SolidColorBrush x:Key="InformationColorBrush" Color="{StaticResource MahApps.Colors.Accent}" o:Freeze="True"/>
-    <SolidColorBrush x:Key="WarningColorBrush"     Color="#FFCA000C"                              o:Freeze="True"/>
+    <SolidColorBrush x:Key="InformationColorBrush" Color="{DynamicResource MahApps.Colors.Accent}" o:Freeze="True"/>
+    <SolidColorBrush x:Key="WarningColorBrush"     Color="#FFCA000C"                               o:Freeze="True"/>
 
 </ResourceDictionary>
